--- a/mysite.html
+++ b/mysite.html
@@ -1,57 +1,63 @@
  <html>
     <head>
-        <title>Best News ever!</title>
+        <title id="site-title">Best News ever!</title>
+        <link rel="stylesheet" href="css/style.css" />
 
     </head>
     <body>
-        <header>
-            <h1>Best News Ever</h1>
+        <header id="main-header">
+            <h1 id="buggy">Best News Ever</h1>
             <h3>We dont care if its best, We care that its the best</h3>
+            <!-- <marquee behavior="" direction="top">This is my site </marquee> -->
         </header>
 
         <main>
-            <section>
+            <!-- <section>
                 <h2>About me</h2>
                     <p>We have spent years in the news industry,
                         and found that readers preffer the best news and not the accurate news.
                     </p>
-            </section>
+            </section> -->
 
-            <section>
+            <section id="top-stories">
                 <article>
-                    <img  src="dog.jpg" width="300px"/>
-                    <a href="#"><h3>Dog kidnaps clowns</h3></a>
-                    <p>In a shocking turn of events it is found that
+                    <div class="article-image" style="background:url(dog.jpg)"></div>
+                    <!-- <img  src="dog.jpg" width="300px"/> -->
+                     <h3>Dog kidnaps clowns</h3>
+                        <p>In a shocking turn of events it is found that
                         dog kidnaps a clown.
-                    </p>
+                        <a href="#" class="more-link">Read more...</a>
+                        </p>
 
                 </article>
-                <img src="alien.jpg"/>
-                <a href="#"><h3>Aliens are found in space</h3></a>
-                <p>Have you ever wonder what outer space has.
-                </p>
-
                 <article>
+                    <div class="article-image" style="background:url(alien.jpg)"></div>
+                <!-- <img src="alien.jpg"/> -->
+                   <h3>Aliens are found in space</h3>
+                        <p>Have you ever wonder what outer space has.
+                            <a href="#" class="more-link">Read more...</a>
+                        </p>
+               </article>
 
+               <article>
+                <div class="article-image" style="background:url(motivation.jpg)"></div>
+                <!-- <img src="motivation.jpg"/> -->
+                <h3>Motivation</h3>
+                <p>In order to get succeed we have to first believe in ourself.  
+                    <a href="#" class="more-link">Read more...</a>
+                </p>
+                
+               </article>
 
-                </article>
             </section>
-
-            <section id="contact-form">
-
-            </section>
-
-
 
             <footer>
-                <centre>&copy; 2023 <br/>
+                <center>&copy; 2023 <br/>
                 <a href="#">Terms of service </a>
-                </centre>
+                </center>
             </footer>
 
         </main>
-
-
 
     </body>
 
